# MyPlayer

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: AudioPlayer.cpp  AudioPlayer.h
app/src/main/cpp/decode/: Decode.cpp  Decode.h
app/src/main/cpp/util/: BlockQueue.cpp  BlockQueue.h  CallBack.cpp  CallBack.h  EGLUtils.cpp  EGLUtils.h  EglUtil.cpp  EglUtil.h  FFmpegError.cpp  FFmpegError.h  GLUtil.cpp  GLUtil.h  GLUtils.cpp  GLUtils.h  Log.h  PlayerStatus.cpp  PlayerStatus.h
app/src/main/cpp/video/: VideoPlayer.cpp  VideoPlayer.h
app/src/main/java/com/example/myplayer/: MainActivity.java  MyApplication.java  NewRecordActivity.java  NotifyLightView.java  RecordActivity.java
app/src/main/java/com/example/myplayer/encode/: MutexMp4.java  MyCamera.java  MyCamera2.java  NewAudioEncode.java  NewVideoEncode.java  VideoData.java  VideoEncode.java
app/src/main/java/com/example/myplayer/newencode/: AudioEncode.java  CameraUtil.java  Encode.java  EncodeAudio.java  EncodeVideo.java  MutexUtil.java  Record.java  RecordAudio.java  RecordVideo.java  VideoEncode.java
app/src/main/java/com/example/myplayer/player/: MediaCodecSupport.java  MyPlayer.java
app/src/main/java/com/example/myplayer/player/gl/: MyRenderer.java
app/src/main/java/com/example/myplayer/player/gl/data/: VertexArray.java
app/src/main/java/com/example/myplayer/player/gl/objects/: PlayerObj.java
app/src/main/java/com/example/myplayer/player/gl/programs/: PlayerProgram.java  ShaderProgram.java
app/src/main/java/com/example/myplayer/player/gl/utils/: Geometry.java  MatrixHelper.java  RandomTagPoint.java  ShaderHelper.java  TextRecourseReader.java  TextureHelper.java  YUVHelper.java
app/src/main/java/com/example/myplayer/player/listener/: FFmpegCallBack.java  OnDecodeVideoDataCallback.java  OnFinishCallBack.java  OnPreparedCallBack.java
app/src/main/java/com/example/myplayer/utils/: DPUtil.java  WriteFile.java  YUVUtil.java
app/src/main/res/layout/: activity_main.xml  activity_new_record.xml  activity_record.xml
app/src/main/res/raw/: yuv_frag_shader.glsl  yuv_vertex_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
